docs/sf-export/sfdx-raw/objects/Async_Operation__c/Async_Operation__c.object-meta.xml
<CustomObject>
    <label>Async Operation</label>
    <nameField>
        <displayFormat>AO-{00000}</displayFormat>
        <label>Async Operation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Async Operations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>