docs/sf-export/sfdx-raw/objects/Async_Operation__c/fields/Ad_Click_Id__c.field-meta.xml
<CustomField>
    <fullName>Ad_Click_Id__c</fullName>
    <formula>IF(NOT(ISBLANK(Lead__r.Ad_Click_Id__c)), Lead__r.Ad_Click_Id__c, Opportunity__r.Ad_Click_Id__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ad Click Id</label>
    <type>Text</type>
</CustomField>