docs/sf-export/sfdx-raw/objects/Async_Operation__c/fields/Ad_Click_Id_Text__c.field-meta.xml
<CustomField>
    <fullName>Ad_Click_Id_Text__c</fullName>
    <label>Ad Click Id Text</label>
    <length>240</length>
    <type>Text</type>
</CustomField>