docs/sf-export/sfdx-raw/objects/Async_Operation__c/fields/Additional_Details__c.field-meta.xml
<CustomField>
    <fullName>Additional_Details__c</fullName>
    <label>Additional Details</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>