docs/sf-export/sfdx-raw/objects/Async_Operation__c/fields/Async_Type__c.field-meta.xml
<CustomField>
    <fullName>Async_Type__c</fullName>
    <label>Async Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Future</fullName>
            </value>
            <value>
                <fullName>Queueable</fullName>
            </value>
            <value>
                <fullName>Batch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>