docs/sf-export/sfdx-raw/objects/Async_Operation__c/fields/Customer_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Phone_Number__c</fullName>
    <label>Customer Phone Number</label>
    <length>120</length>
    <type>Text</type>
</CustomField>