docs/sf-export/sfdx-raw/objects/Async_Operation__c/fields/Individual__c.field-meta.xml
<CustomField>
    <fullName>Individual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual</label>
    <referenceTo>Individual</referenceTo>
    <relationshipLabel>Async Operations</relationshipLabel>
    <relationshipName>Async_Operations</relationshipName>
    <type>Lookup</type>
</CustomField>