docs/sf-export/sfdx-raw/objects/Async_Operation__c/fields/Is_Retry_Due__c.field-meta.xml
<CustomField>
    <fullName>Is_Retry_Due__c</fullName>
    <formula>AND(
   BLANKVALUE(Retry_Attempts__c, 0) &lt; 
     CASE(Operation__c, 
        &quot;AdClick_Id_Update&quot;, $CustomMetadata.Async_Operation_Retry_Config__mdt.AdClick_Id_Update.Max_Retry_Count__c,
        3 
     ),

   OR(
      ISBLANK(Last_Retry_Timestamp__c),
      
      ( (NOW() - Last_Retry_Timestamp__c) * 24 ) &gt;= 
         CASE(Operation__c,
            &quot;AdClick_Id_Update&quot;, $CustomMetadata.Async_Operation_Retry_Config__mdt.AdClick_Id_Update.Retry_Interval_Hours__c,
            1 
         )
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Retry Due</label>
    <type>Checkbox</type>
</CustomField>