docs/sf-export/sfdx-raw/objects/Async_Operation__c/fields/Last_Retry_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Last_Retry_Timestamp__c</fullName>
    <label>Last Retry Timestamp</label>
    <type>DateTime</type>
</CustomField>