docs/sf-export/sfdx-raw/objects/Async_Operation__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Async Operations</relationshipLabel>
    <relationshipName>Async_Operations</relationshipName>
    <type>Lookup</type>
</CustomField>