docs/sf-export/sfdx-raw/objects/Async_Operation__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <length>120</length>
    <type>Text</type>
</CustomField>