docs/sf-export/sfdx-raw/objects/Async_Operation__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Remove Lead From Five9 - Lead Final Disposition</fullName>
            </value>
            <value>
                <fullName>Remove Lead From Five9 - Opportunity Final Disposition</fullName>
            </value>
            <value>
                <fullName>Remove Lead From Five9 - Opportunity Closed</fullName>
            </value>
            <value>
                <fullName>DeDuplicate Lead</fullName>
            </value>
            <value>
                <fullName>IPQualityScoreCheck</fullName>
                <label>IP Quality Score Check</label>
            </value>
            <value>
                <fullName>Remove Lead From Five9 - API</fullName>
            </value>
            <value>
                <fullName>RedTrack_LeadCreation</fullName>
                <label>RedTrack - Lead Creation</label>
            </value>
            <value>
                <fullName>RedTrack_LeadQualification</fullName>
                <label>RedTrack - Lead Qualification</label>
            </value>
            <value>
                <fullName>RedTrack_OpportunityCreation</fullName>
                <label>RedTrack - Opportunity Creation</label>
            </value>
            <value>
                <fullName>RedTrack_ContractSent</fullName>
                <label>RedTrack - Contract Sent</label>
            </value>
            <value>
                <fullName>RedTrack_OpportunityClosedWon</fullName>
                <label>RedTrack - Opportunity Closed Won</label>
            </value>
            <value>
                <fullName>RedTrack_OpportunityFirstPayment</fullName>
                <label>RedTrack - Opportunity First Payment</label>
            </value>
            <value>
                <fullName>SetCustomerStatusAPI</fullName>
            </value>
            <value>
                <fullName>RedTrack_InboundLeadQualification</fullName>
                <label>RedTrack - Inbound Lead Qualification</label>
            </value>
            <value>
                <fullName>RedTrack_InboundLeadCreation</fullName>
                <label>RedTrack - Inbound Lead Creation</label>
            </value>
            <value>
                <fullName>AdClick_Id_Update</fullName>
                <label>AdClick Id Update</label>
            </value>
            <value>
                <fullName>Citadel_API</fullName>
                <label>Citadel API</label>
            </value>
            <value>
                <fullName>Legal_Network_Communication</fullName>
                <label>Legal Network Communication</label>
            </value>
            <value>
                <fullName>RedTrackLeadInsert</fullName>
                <isActive>false</isActive>
                <label>RedTrackLeadInsert</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>