docs/sf-export/sfdx-raw/objects/Async_Operation__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Async Operations</relationshipLabel>
    <relationshipName>Async_Operations</relationshipName>
    <type>Lookup</type>
</CustomField>