docs/sf-export/sfdx-raw/objects/Async_Operation__c/fields/Remaining_Retries__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Retries__c</fullName>
    <formula>$CustomMetadata.Async_Operation_Retry_Config__mdt.AdClick_Id_Update.Max_Retry_Count__c  -  Retry_Attempts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Retries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>