docs/sf-export/sfdx-raw/objects/Async_Operation__c/fields/Retry_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Retry_Attempts__c</fullName>
    <label>Retry Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>