docs/sf-export/sfdx-raw/objects/Async_Operation__c/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate RT Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>