docs/sf-export/sfdx-raw/objects/Async_Operation__c/fields/Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id__c</fullName>
    <label>Unique Id</label>
    <length>240</length>
    <type>Text</type>
</CustomField>