docs/sf-export/sfdx-raw/objects/Async_Operation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Async_Type__c</columns>
    <columns>Is_Retry_Due__c</columns>
    <columns>Last_Retry_Timestamp__c</columns>
    <columns>Operation__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>